collapsiable-icon-fix

--- a/app/theme/_common.scss
+++ b/app/theme/_common.scss
@@ -654,6 +654,12 @@ body {
     font-size: 30px;
 }
 
+.icon-collapsiable-icon {
+    color: $gray-500;
+    font-size: 14px;
+    font-weight: bold;
+}
+
 //
 // Input Fields section
 //
